[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lufah"
dynamic = ["version"]
description = "Command line utility for controlling foldingathome version 8"
keywords = ["fah", "foldingathome", "folding-at-home", "folding@home"]
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "Kevin Bernhagen", email = "kbernhagen.github@gmail.com"}]
requires-python = ">=3.8"
dependencies = ["websockets>=12.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools.dynamic]
version = {attr = "lufah.__version__"}

#[project.optional-dependencies]

[project.scripts]
lufah = "lufah:main"

[project.urls]
Homepage = "https://github.com/kbernhagen/lufah"
