[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lufah"
dynamic = ["version"]
description = "Command line utility for controlling foldingathome version 8"
keywords = ["fah", "foldingathome", "folding-at-home", "folding@home"]
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "Kevin Bernhagen", email = "kbernhagen.github@gmail.com"}]
requires-python = ">=3.8.1"
dependencies = [
    "shellingham",
    "typer-slim",
    "websockets>=13.0.1",
    "windows-curses; platform_system=='Windows'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
lufah = "lufah.cli_typer:main"

[project.urls]
Homepage = "https://github.com/kbernhagen/lufah"
Changelog = "https://github.com/kbernhagen/lufah/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/lufah/__init__.py"

[tool.uv]
dev-dependencies = [
    "argh",
    "pipx",
    "pylint",
    "pytest",
    "ruff",
    "twine",
]
